packages/swc-plugin-workflow/transform/tests/errors/non-async-functions/output-client.js
import { registerStepFunction } from "workflow/internal/private";
/**__internal_workflows{"workflows":{"input.js":{"validWorkflow":{"workflowId":"workflow//input.js//validWorkflow"}}},"steps":{"input.js":{"validStep":{"stepId":"step//input.js//validStep"}}}}*/;
// Error: sync function with use step
export function syncStep() {
    'use step';
    return 42;
}
// Error: sync arrow function with use workflow
export const syncWorkflow = ()=>{
    'use workflow';
    return 'test';
};
// These are ok
export async function validStep() {
    return 42;
}
export const validWorkflow = async ()=>{
    throw new Error("You attempted to execute workflow validWorkflow function directly. To start a workflow, use start(validWorkflow) from workflow/api");
};
validWorkflow.workflowId = "workflow//input.js//validWorkflow";
registerStepFunction("step//input.js//validStep", validStep);
